<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingLeft="@dimen/dp_20"
    android:paddingRight="@dimen/dp_20">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:layout_marginBottom="@dimen/dp_20">

        <TextView
            android:id="@+id/loginTextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="Dont't have PaperFlow Account?"
            android:textColor="@color/gray"
            android:textSize="@dimen/sp_14" />
        <TextView
            android:id="@+id/signupTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginLeft="2dp"
            android:textColor="@color/selected_button_text_color"
            android:text="@string/signup"
            android:onClick="onClickSignup"
            android:textSize="@dimen/sp_14"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/appNameLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="@dimen/dp_20"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/paper_plane" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textSize="@dimen/sp_20"
            android:layout_marginLeft="@dimen/dp_10"
            android:textColor="@color/app_name_title_color"/>
    </LinearLayout>


    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/create_new_pass"
        android:textStyle="bold"
        android:textSize="@dimen/sp_24"
        android:layout_marginLeft="@dimen/dp_10"
        android:textColor="@color/title_color"
        android:layout_below="@+id/appNameLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_30"
        />

    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="New password cannot be same as previously used"
        android:textSize="@dimen/sp_16"
        android:layout_marginLeft="@dimen/dp_10"
        android:textColor="@color/gray"
        android:layout_below="@+id/titleTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_5"
        />








    <EditText
        android:id="@+id/passEdittext"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_below="@+id/loginTextView"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/dp_10"
        android:hint="Password"
        android:textSize="@dimen/sp_16"
        android:background="@drawable/form_number_bg"
        android:layout_marginTop="@dimen/dp_45"/>
    <EditText
        android:id="@+id/conPassEdittext"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_below="@+id/passEdittext"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/dp_10"
        android:hint="Password"
        android:textSize="@dimen/sp_16"
        android:background="@drawable/form_number_bg"
        android:layout_marginTop="@dimen/dp_10"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@drawable/login_button_bg"
        android:textSize="@dimen/sp_18"
        android:textColor="@color/white"
        android:text="@string/set_new_pass"
        android:alpha="0.5"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:layout_below="@+id/conPassEdittext"
        android:layout_marginTop="@dimen/dp_20"/>

</RelativeLayout>